--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ streamlit = "^1.30.0"
 plotly = "^5.18.0"
 pandas-stubs = "~=2.3.3"
 statsmodels = "^0.14.6"
+undetected-chromedriver = "^3.5.5"
+setuptools = "^80.9.0"
 
 [build-system]
 requires = ["poetry-core"]
